--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <table cellspacing = 20>
       <tr>
-        <td><img src="Images/sboPicture.jpeg" width="200" alt="Abby Furgeson Student Government Picture"></td>
+        <td><img src="images/sboPicture.jpeg" width="200" alt="Abby Furgeson Student Government Picture"></td>
         <td><h1>Abby Furgeson</h1>
 
         <p><em>Exploring Computer Science 1: </em><strong>Beginning Computer Science with HTML and CSS: </strong><a href="https://dsd.instructure.com/courses/1191669">Mr. Poll Canvas</a></p>
@@ -20,8 +20,8 @@
 
     <h3>Bio</h3>
 
-    <p>I am currently a 9th grader at Sunset Jr. High in Sunset, UT. While being a student, I am also a Student Body Officer, and have the position of one of four SBO Vice Presidents. I feel I am a fairly rounded person. I get good grades – I’ve gotten a 4.0 every term since the beginning of 7th grade. I also am a good leader and have always been willing to help others. I have a good circle of friends at school, too. Being an Officer, I have the opportunity to put myself out there, meet new people, and really make a difference in the lives of my peers and my school.</p>
-    <p>I am 15 years old and live in Clinton, UT. I have six siblings – two of which do not live with me. In my household, I am the oldest of five kids. I love spending time with my friends and family. One thing my family and I love to do is watching movies while eating pizza, usually on Friday nights. I am definitely a perfectionist, with maybe a hint of OCD. I love to clean and organize things, and I absolutely <em>love</em> office supplies! I also like to read and decorate.</p>
+    <p>I am currently a 9th grader at Sunset Jr. High School. While being a student, I am also a Student Body Officer, and have the position of one of four SBO Vice Presidents. I feel I am a fairly rounded person. I get good grades – I’ve gotten a 4.0 every term since the beginning of 7th grade. I also am a good leader and have always been willing to help others. I have a good circle of friends at school, too. Being an Officer, I have the opportunity to put myself out there, meet new people, and really make a difference in the lives of my peers and my school.</p>
+    <p>I am 15 years old and have six siblings – two of which do not live with me. In my household, I am the oldest of five kids. I love spending time with my friends and family. One thing my family and I love to do is watching movies while eating pizza, usually on Friday nights. I am definitely a perfectionist, with maybe a hint of OCD. I love to clean and organize things, and I absolutely <em>love</em> office supplies! I also like to read and decorate.</p>
 
     <hr>
 
