--- a/contactMe.html
+++ b/contactMe.html
@@ -10,7 +10,7 @@
     <h2>Contact Me</h2>
 
     <ul>
-      <li>Email: 25afurgeson@go.dsdmail.net</li>
+      <li>Email: abbyfurgeson2006@gmail.com</li>
       <li>Phone: 801-390-7460</li>
     </ul>
 
